french FAQ translations

--- a/source/localizable/faq.fr.html.erb
+++ b/source/localizable/faq.fr.html.erb
@@ -3,56 +3,55 @@
 <div class="container">
   <section class="subpage">
     <h2>FAQ</h2>
-    <div class="alert alert-primary text-center font-italic">Si vous pouvez nous aider à traduire, contactez-nous.</div>
 
-    <h3 class="faq__question">Why did you make this survey, what does this help?</h3>
-    <p>As the COVID-19 pandemic has spread across the world, it has become apparent that testing is essential for slowing community spread, as has been seen in South Korea and Vò, Italy. However, non-targeted longitudinal testing of a large population is currently infeasible. At the moment, in Switzerland, diagnostic testing is limited to only severe cases. We would like to supplement traditional diagnostic testing with a short and anonymous survey. This survey will allow us to longitudinally track the spread of symptomatic persons across the entire country and possibly hint as to how many symptomatic people currently exist, and where there is likely to be a large increase or local clustering of cases. We plan to release summary statistics to educate the public and give clear motivation to practice physical distancing, and to inform the Canton of Bern and other interested governmental entities on the symptom dynamics in their communities. </p>
+    <h3 class="faq__question">Pourquoi avez-vous créé ce formulaire, en quoi est-il utile ?</h3>
+    <p>Au fur et à mesure que la pandémie au COVID-19 s’est répandue à travers le monde, il est devenu clair que tester la population était essentiel pour freiner la propagation du virus dans la communauté, comme cela a été démontrée en Corée du Sud et à Vò en Italie. Cependant tester une large population de façon non ciblée et longitudinale s’avère maintenant impossible. Actuellement en Suisse, les tests diagnostiques sont limités aux cas sévères. Nous aimerions compléter ces données avec ce court formulaire anonyme. Celui-ci nous permettra de suivre au long cours, la répartition des personnes symptomatiques dans l’ensemble du pays et éventuellement de donner des indications sur le nombre de personnes symptomatiques existant actuellement et sur les endroits où il est probable qu'il y ait une forte augmentation des cas ou des groupements isolés. Nous prévoyons de publier des statistiques sommaires afin d’éduquer le public et donner une motivation claire à la pratique de l'éloignement physique, etinformer le canton de Berne et les autres entités gouvernementales intéressées àsuivre la dynamique des symptômes dans leur communauté.</p>
     
-    <h3 class="faq__question">What is the aim of the campaign?</h3>
-    <p>The aim of the COVID-19 tracker is to collect as much data, as quickly, and for as many days as possible, from a sample of the Swiss population, no matter whether they are sick or not. Among other things, this data is intended to provide a more detailed picture of the corona situation in different parts of our country (see previous question).</p>
+    <h3 class="faq__question">Quel est le but de la campagne ?</h3>
+    <p>Le but du COVID-19 tracker est de collecter un maximum de données le plus rapidement et longtemps possible auprès d’un échantillon de la population suisse. Peu importe qu’elle soit malade ou non. Entre autres choses, ces données visent à fournir une image plus détaillée de la situation du virus dans différentes parties de notre pays (voir la question précédente).</p>
     
-    <h3 class="faq__question">Why do I need to fill the survey every day or at least frequently?</h3>
-    <p>To understand how symptoms evolve in a specific area, it is important to see how individual respondents change over time. Filling the survey once is an important data point, but aggregating data points across time is more valuable to identify changes in your area code and your city. </p>
+    <h3 class="faq__question">Pourquoi dois-je remplir le sondage tous les jours ou du moins fréquemment ?</h3>
+    <p>Pour comprendre comment les symptômes évoluent dans une région précise, il est important de voir comment les répondants individuels évoluent au fil du temps. Remplir l’enquête une fois est un point de données important, mais l’accumulation de points de données au fil du temps est plus utile pour identifier les changements dans votre district et votre ville.</p>
     
-    <h3 class="faq__question">Should I answer the survey even if I have no symptoms?</h3>
-    <p>Yes! We are interested in the changes in people's health, so, knowing that you felt well yesterday but you have a fever today, is important information. Just select "No symptoms" and continue to do so, unless the situation changes.</p>
+    <h3 class="faq__question">Dois-je remplir le formulaire si je n’ai pas de symptômes ?</h3>
+    <p>Oui ! Nous nous intéressons aux changements dans la santé des gens, donc, savoir que vous vous sentiez bien hier, mais que vous avez de la fièvre aujourd’hui, est une information importante. Il suffit de sélectionner « Aucun symptôme » et de continuer à le faire, à moins que la situation ne change.</p>
 
    
-    <h3 class="faq__question">I've been filling other COVID-19 surveys, or using similar apps. Should I also fill yours?</h3>
-    <p>Yes, please fill ours as well as the other ones if you have started to do so. Please also read the next question for details on what is being done to join efforts with other initiatives.</p>
+    <h3 class="faq__question">J’ai rempli d’autres enquêtes liées au COVID-19, ou utiliser des applications similaires. Dois-je aussi remplir la vôtre ?</h3>
+    <p>Oui, s’il vous plaît remplissez notre formulaire ainsi que les autres, si vous avez commencé à le faire. Veuillez également lire la question suivante pour plus de détails sur ce qui est fait pour joindre nos efforts à d’autres initiatives.</p>
     
    
-    <h3 class="faq__question">Why are there many options for symptoms tracking?</h3>
-    <p>It is not unusual in a time of high activity and urgency that several projects start in parallel. Our multidisciplinary team has worked diligently for several weeks to make sure that our survey is informative for both physicians and epidemiologists and fulfills the high ethical and legal standards that have to be met to safely and securely collect health-related data of the Swiss population. We have secured collaboration and support from the Canton of Bern and ETHZ, and we are coordinating with the other efforts to consolidate into a joint data stream across the currently available symptom tracking options. </p>
+    <h3 class="faq__question">Pourquoi existe-t-il de nombreuses options pour le suivi des symptômes ?</h3>
+    <p>Il n’est pas rare, qu’en période de forte activité et d’urgence, plusieurs projets commencent en parallèle. Notre équipe multidisciplinaire travaille diligemment depuis plusieurs semaines pour s’assurer que notre enquête est informative pour les médecins et les épidémiologistes et qu’elle répond aux normes éthiques et juridiques élevées qui doivent être respectées pour recueillir en toute sécurité les données relatives à la santé de la population suisse. Nous avons obtenu la collaboration et le soutien du canton de Berne et de l’ETHZ, et nous nous coordonnons avec les autres efforts visant à consolider un flux de données conjoint parmi les options actuellement disponibles pour le suivi des symptômes. </p>
     
-    <h3 class="faq__question">Who is behind this project?</h3>
-    <p>We are a group of academics, independent researchers, software developers, biologists and medical doctors working in conjunction with the health department of the Canton of Bern to provide what we believe is a needed service for our community <br />
+    <h3 class="faq__question">Qui est derrière ce projet ?</h3>
+    <p>Nous sommes un groupe d’universitaires, de chercheurs indépendants, de développeurs de logiciels, de biologistes et de médecins travaillant en collaboration avec le département de la santé du canton de Berne pour fournir ce que nous croyons être un service nécessaire pour notre communauté. <br />
         <ul>
-        <li>ETH Zürich: Biomedical Informatics group, Department of Computer Science <a href="https://bmi.inf.ethz.ch/">https://bmi.inf.ethz.ch/</a> </li>
-        <li>Milliways: We find pragmatic solutions for almost every IT problem. </li>
-        <li>Nine: We ensure nobody has to worry about scalability of the backend thanks to a Kubernetes Cluster </li>
-        <li>Astina: Supplier of backend and data processing software solutions from Zurich </li>
-        <li>Esri: We pioneer problem solving and visualisation with Geographic Information System software to help you see what others can’t.</li>
-        <li>Canton of Bern: Dr. med. Jan von Overbeck, medical liaison and infectious diseases specialist  </li>
+        <li>ETH Zürich: Groupe d’informatique biomédicale, Département d’informatique <a href="https://bmi.inf.ethz.ch/">https://bmi.inf.ethz.ch/</a> </li>
+        <li>Milliways: Nous trouvons des solutions pragmatiques pour presque tous les problèmes informatiques </li>
+        <li>Nine: Nous nous assurons que personne n’ait à s’inquiéter de l’évolutivité des backends grâce à un cluster Kubernetes</li>
+        <li>Astina: Fournisseur de solutions logicielles de backend et de traitement de données de Zurich </li>
+        <li>Esri: Nous sommes les pionniers de la résolution de problèmes et de la visualisation avec le logiciel Geographic Information System pour vous aider à voir ce que les autres ne peuvent pas faire. </li>
+        <li>Canton de Berne: Dr. med. Jan von Overbeck, coordinateur médicale et spécialiste en maladies infectieuses </li>
         </ul>
 
     </p>
   
-    <h3 class="faq__question">Are medical doctors involved? Is this effort scientifically supported?</h3>
-    <p>The survey has been developed in close collaboration and with continuous feedback from physicians of relevant specialties ( such as epidemiology, intensive care, and infectology), as well as leading epidemiological scientists, and Canton of Bern authorities. We are especially grateful to Dr. med. Jan von Overbeck, Dr. med. Tobias Merz, Dr. med. Martin Faltys, Dr. Christian Althaus, Dr. Marcel Salathé, and many others out of a great team of supporters.</p>
+    <h3 class="faq__question">Les médecins sont-ils impliqués ? Cet effort est-il scientifiquement soutenu ?</h3>
+    <p>L’enquête a été développée en étroite collaboration et avec le suivi continu des médecins de spécialités pertinentes (telles que l’épidémiologie, les soins intensifs et l’infectiologie), ainsi que des scientifiques épidémiologiques de premier plan, et des autorités du canton de Berne. Nous sommes particulièrement reconnaissants au Dr. Jan von Overbeck, au Dr. Tobias Merz, au Dr. Martin Faltys, au Dr. Christian Althaus, au Dr. Marcel Salathé ainsi que bien d’autres membres d’une grande équipe de partisans. </p>
   
-    <h3 class="faq__question">Why only symptoms? Some symptoms can also relate to flu, cold...etc.</h3>
-    <p>This survey is not intended to be a COVID-19 diagnostic tool, and taking part in it does not preclude a diagnostic test if needed. Our goal is to estimate the amount of symptomatic people, and the prevalence of symptoms previous studies (such as <a href="https://www.medrxiv.org/content/10.1101/2020.03.19.20038844v2">this one</a>) have found to be correlated with reported positive COVID-19 tests. We hope this gives the public and experts insight into where COVID-19 is probably currently occurring the most, and can help predict where new clusters may develop.</p>
+    <h3 class="faq__question">Pourquoi seulement les symptômes ? Certains symptômes peuvent également être liés à la grippe, au refroidissement, etc...</h3>
+    <p>Cette enquête n’est pas destinée à être un outil de diagnostic du COVID-19 et y participer n’exclut pas un test diagnostique si nécessaire. Notre objectif est d’estimer la quantité de personnes symptomatiques, et la prévalence des symptômes des études antérieures (telle que celle-ci) se sont avérées corrélées avec les tests positifs au COVID-19 rapportés. Nous espérons que cela donnera au public et aux experts un aperçu de l’endroit où le COVID-19 se trouve probablement le plus actuellement et aidera à prédire les foyers émergents.</p>
   
-    <h3 class="faq__question">Where is the data stored? Is my data safe?</h3>
-    <p>All data is collected anonymously and is stored securely within Switzerland. We have taken the appropriate measures to prevent public access to the raw data. In agreement with our ethics clearance, data will only be made public in aggregated form, not allowing the singling out of an individual person.We do not collect names nor other forms of personal data. All data transmission is encrypted.</p>
+    <h3 class="faq__question">Où sont stockées les données ? Mes données sont-elles sécurisées ?</h3>
+    <p>Toutes les données sont collectées de manière anonyme et stockées en toute sécurité en Suisse. Nous avons pris les mesures appropriées pour empêcher le public d’accéder aux données brutes. En accord avec notre autorisation éthique, les données ne seront rendues publiques que sous forme agrégée, ne permettant pas de distinguer un individu en particulier. Nous ne recueillons pas de noms, ni d’autres formes de données personnelles. Toute transmission de données est cryptée.</p>
   
-    <h3 class="faq__question">What do you do with the data?</h3>
-    <p>In the short term, the data will be available to epidemiology researchers and the authorities to better estimate the dynamics of COVID-19 spread within Switzerland, and will be used to provide informative visualizations for the general public, see <a href="https://www.covidtracker.ch/it/map.html">our map</a>, for example. While the data can not be used to diagnose an individual, the data points aggregated over local areas and time, will show hotspots of emerging symptoms and allow for a timely reaction. In the long term, the full data set will be a valuable resource for research to better understand how diseases such as COVID-19 spread and inform on how well measures of mitigation worked.
+    <h3 class="faq__question">Que faites-vous des données ?</h3>
+    <p>À court terme, les données seront mises à la disposition des chercheurs en épidémiologie et des autorités afin de mieux estimer la dynamique de propagation du COVID-19 en Suisse, et elles seront utilisées pour fournir des visualisations informatives au grand public, (cf. notre carte, par exemple). Bien que les données ne puissent pas être utilisées pour diagnostiquer une personne, les données analysées en fonction du lieu et dans le temps, montreront des zones à risque de symptômes émergents et permettra une réaction en temps opportun. À long terme, l’ensemble complet des données sera une ressource précieuse pour la recherche afin de mieux comprendre comment les maladies telles que le COVID-19 se propagent et d’informer sur la façon dont les mesures barrières ont fonctionné.
     </p>
   
-    <h3 class="faq__question">Could the data be biased? if, for example, more people fill out the questionnaire in areas such as cities or other densely populated areas?</h3>
-    <p>Yes, this type of data collection has inherent biases and caveats. But many biases can be corrected if widespread participation is achieved, and if many people participate, observations can be highly accurate. For example, the geographic bias can be corrected by dividing the number of suspected cases by the total submissions in the area of interest, making the resulting percentage of symptoms per zip code more meaningful when put in the context of other zip codes or regions in the country.</p>
+    <h3 class="faq__question">Les données pourraient-elles être biaisées ? si, par exemple, plus de gens provenant de villes ou d’autres régions densément peuplées remplissent le questionnaire ?</h3>
+    <p>Oui, ce type de collecte de données comporte des biais. Mais de nombreux biais peuvent être corrigés si une large et diffuse participation de la population est atteinte, ainsi les observations peuvent être très précises. Par exemple, le biais géographique peut être corrigé en divisant le nombre de cas suspects par le total de participants dans la zone concernée, ce qui rend le pourcentage de symptômes par code postal plus significatif, lorsqu’il est placé dans le contexte d’autres codes postaux ou régions du pays.</p>
   
   </section>
 </div>
