--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -52,7 +52,18 @@ ageRanges:
       <%= partial "localizable/partials/home_more" %>
     </div>
 
-    <form action="<%= config[:api_url] %>/form" onsubmit="persistForm()" method="post" id="covid-form">
+    <div class="maintenance">
+      <img class="side-icon" src="/images/exclamation-triangle.svg" alt="Notice Triangle" width="200" height="200" style="width: 200px;">
+      <div>
+        <h3><%= t(:maintenanceHeader) %></h3>
+        <p>
+        <%= t(:maintenanceText) %>
+        </p>
+      </div>
+    </div>
+
+    <!-- temporarily disabled due to maintenance, see alert above -->
+    <form action="<%= config[:api_url] %>/form" onsubmit="persistForm()" method="post" id="covid-form" style="display: none;">
       <div class="boxed code-chooser">
         <!-- ---------------------------------------------------------
         --- first-time survey?
