--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -52,7 +52,8 @@ ageRanges:
       <%= partial "localizable/partials/home_more" %>
     </div>
 
-    <div class="maintenance">
+    <!--
+    <div class="maintenance" style="display: none;">
       <img class="side-icon" src="/images/exclamation-triangle.svg" alt="Notice Triangle" width="200" height="200" style="width: 200px;">
       <div>
         <h3><%= t(:maintenanceHeader) %></h3>
@@ -61,9 +62,9 @@ ageRanges:
         </p>
       </div>
     </div>
+    -->
 
-    <!-- temporarily disabled due to maintenance, see alert above -->
-    <form action="<%= config[:api_url] %>/form" onsubmit="persistForm()" method="post" id="covid-form" style="display: none;">
+    <form action="<%= config[:api_url] %>/form" onsubmit="persistForm()" method="post" id="covid-form">
       <div class="boxed code-chooser">
         <!-- ---------------------------------------------------------
         --- first-time survey?
