Adds in vaccination questions.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -297,6 +297,58 @@ ageRanges:
       -->
 
       <!-- ---------------------------------------------------------
+      --- covid-19 vacinnated?
+      ---------------------------------------------------------- -->
+      <div class="input-wrap input-wrap--radio">
+        <span class="label"><%= t(:hasBeenVaccinated) %> *</span>
+        <div class="radio-wrap">
+          <label class="radio-item" for="hasBeenVaccinated-1">
+            <input class="js-toggle input" type="radio" name="hasBeenVaccinated" id="hasBeenVaccinated-1" value="yes" data-show="wrap-vaccinated" required>
+            <span><%= t(:yesAnswer) %></span>
+          </label>
+          <label class="radio-item" for="hasBeenVaccinated-0">
+            <input class="js-toggle input" type="radio" name="hasBeenVaccinated" id="hasBeenVaccinated-0" value="no" data-hide="wrap-vaccinated" required>
+            <span><%= t(:noAnswer) %></span>
+          </label>
+          <label class="radio-item" for="hasBeenVaccinated-0">
+            <input class="js-toggle input" type="radio" name="hasBeenVaccinated" id="hasBeenVaccinated-2" value="declined" data-hide="wrap-vaccinated" required>
+            <span><%= t(:declinedAnswer) %></span>
+          </label>
+        </div>
+      </div>
+
+      <!-- ---------------------------------------------------------
+      --- (if vaccinated) vaccination type
+      ---------------------------------------------------------- -->
+      <div id="wrap-vaccinated" class="js-hide">
+        <div class="input-wrap input-wrap--text input-wrap--child">
+          <label class="label" for="whenVaccinatedFirst"><%= t(:whenVaccinatedFirst) %> *</label>
+          <input id="whenVaccinatedFirst" name="whenVaccinatedFirst" class="input input--short" type="date" min="2019-11-01" max="2022-12-31" required>
+        </div>
+        <div class="input-wrap input-wrap--text input-wrap--child">
+          <label class="label" for="whenVaccinatedSecond"><%= t(:whenVaccinatedSecond) %></label>
+          <input id="whenVaccinatedSecond" name="whenVaccinatedSecond" class="input input--short" type="date" min="2019-11-01" max="2022-12-31">
+        </div>
+        <div class="input-wrap input-wrap--child input-wrap--radio">
+          <span class="label"><%= t(:vaccineType) %> *</span>
+          <div class="radio-wrap">
+            <label class="radio-item" for="vaccineType-pfizer">
+              <input class="input" type="radio" name="vaccineType" id="vaccineType-pfizer" value="pfizer" required>
+              <span><%= t(:vaccinePfizer) %></span>
+            </label>
+            <label class="radio-item" for="vaccineType-moderna">
+              <input class="input" type="radio" name="vaccineType" id="vaccineType-moderna" value="moderna" required>
+              <span><%= t(:vaccineModerna) %></span>
+            </label>
+            <label class="radio-item" for="vaccineType-JJ">
+              <input class="input" type="radio" name="vaccineType" id="vaccineType-JJ" value="johnson_johnson" required>
+              <span><%= t(:vaccineJJ) %></span>
+            </label>
+          </div>
+        </div>
+      </div>
+
+      <!-- ---------------------------------------------------------
       --- works in healthcare
       ---------------------------------------------------------- -->
       <div class="input-wrap input-wrap--radio">
