fix contact email address

--- a/source/localizable/consent.en.html.erb
+++ b/source/localizable/consent.en.html.erb
@@ -25,7 +25,7 @@
     <ul>
       <li>I am participating in this study on a voluntary basis and can withdraw from the study at any time without giving reasons and without any negative consequences.</li>
       <li>I have been informed <a href="/study_info.html" target="_blank">in writing</a> about the aims and the procedures of the study, the advantages and disadvantages, as well as potential risks.</li>
-      <li>I have read the written information for the volunteers. I am aware that I can direct all questions related to the study via e-mail to <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>. My questions related to participating in the study have been answered satisfactorily. I have been given a copy of the <a href="/study_info.html" target="_blank">information for volunteers</a> and the <a href="/consent.html">consent form</a>.</li>
+      <li>I have read the written information for the volunteers. I am aware that I can direct all questions related to the study via e-mail to <a href="mailto:info@covidtracker.ch">info@covidtracker.ch</a>. My questions related to participating in the study have been answered satisfactorily. I have been given a copy of the <a href="/study_info.html" target="_blank">information for volunteers</a> and the <a href="/consent.html">consent form</a>.</li>
       <li>I was given sufficient time to make a decision about participating in the study.</li>
       <li>By checking the box at the end of the survey, I certify that I fulfill the requirements for participating in the study stated in the information for the volunteers.</li>
       <li>I agree that the responsible investigators and/or the members of the Ethics Commission have access to the original data under strictly observed rules of confidentiality.</li>
