--- a/source/localizable/study_info.en.html.erb
+++ b/source/localizable/study_info.en.html.erb
@@ -58,7 +58,7 @@
 
     <p>
       <strong>Contact persons</strong>
-      In case of any questions, please contact Prof. Dr. Gunnar R&auml;tsch under <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>.
+      In case of any questions, please contact Prof. Dr. Gunnar R&auml;tsch under <a href="mailto:info@covidtracker.ch">info@covidtracker.ch</a>.
     </p>
   </section>
 </div>
