--- a/source/localizable/study_info.fr.html.erb
+++ b/source/localizable/study_info.fr.html.erb
@@ -61,7 +61,7 @@ La collecte de données durera au moins un an, à compter de mars 2020.
 
     <p>
       <strong>Contact</strong>
-      Pour toute question veuillez contacter le professeur Dr. Gunnar  R&auml;tsch, par e-mail <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>.
+      Pour toute question veuillez contacter le professeur Dr. Gunnar  R&auml;tsch, par e-mail <a href="mailto:info@covidtracker.ch">info@covidtracker.ch</a>.
     </p>
   </section>
 </div>
