--- a/source/localizable/study_info.it.html.erb
+++ b/source/localizable/study_info.it.html.erb
@@ -57,7 +57,7 @@
 
     <p>
       <strong>Contatti</strong>
-      In caso di domande, si prega di contattare il Prof. Dr. Gunnar R&auml;tsch all’indirizzo di posta elettronica <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>.
+      In caso di domande, si prega di contattare il Prof. Dr. Gunnar R&auml;tsch all’indirizzo di posta elettronica <a href="mailto:info@covidtracker.ch">info@covidtracker.ch</a>.
     </p>
   </section>
 </div>
