--- a/source/localizable/study_info.html.erb
+++ b/source/localizable/study_info.html.erb
@@ -58,7 +58,7 @@
 
     <p>
       <strong>Ansprechpartner</strong>
-      Bei Fragen wenden Sie sich bitte an Prof. Dr. Gunnar R&auml;tsch unter <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>.
+      Bei Fragen wenden Sie sich bitte an Prof. Dr. Gunnar R&auml;tsch unter <a href="mailto:info@covidtracker.ch">info@covidtracker.ch</a>.
     </p>
   </section>
 </div>
